fixed up the post component wrapping for spongebob

--- a/bitlink-app/src/app/components/post-component/post-component.component.scss
+++ b/bitlink-app/src/app/components/post-component/post-component.component.scss
@@ -10,15 +10,13 @@ $grey-color: rgba(100, 100, 100);
   background-color: $background-color;
   font-family: Inter, sans-serif;
   color: $text-color;
-  margin: 0;
-  padding: 0;
 }
 #post-profile-icon {
   // width: 2.5rem;
   // height: 2.5rem;
   object-fit: cover;
   border-radius: 50%;
-  margin-left: 0.5rem;
+  // margin-left: 0.5rem;
   display: flex;
   align-self: center;
 }
@@ -99,7 +97,7 @@ $grey-color: rgba(100, 100, 100);
 
 #image {
   width: 100%;
-  max-width: 100vh;
+  max-width: 80vw;
   max-height: 50vh;
   object-fit: contain;
 }
